--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -785,6 +785,9 @@
 
     // .products-slider__navigation
     &__navigation {
+        .swiper-pagination-current {
+            
+        }
     }
 
     // .products-slider__slider
