--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -744,7 +744,7 @@
 
         &::before{
             flex: 0 0 rem(32);
-            font-size: rem(16);
+            font-size: rem(24);
             color: #dadada;
             transition: color 0.3s ease 0s;
         }
@@ -785,8 +785,14 @@
 
     // .products-slider__navigation
     &__navigation {
+        font-weight: 500;
+        letter-spacing: 0.35px;
+        color: $grayColorText;
         .swiper-pagination-current {
-            
+            font-size: rem(30);
+            font-weight: 900;
+            letter-spacing: 0.75px;
+            color: #333;
         }
     }
 
@@ -807,7 +813,7 @@
     // .products-slider__items
     &__items {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(rem(260), 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(rem(260), 1fr));
         gap: rem(30);
     }
 }
