--- a/src/scss/footer-menu.scss
+++ b/src/scss/footer-menu.scss
@@ -21,13 +21,14 @@
     // .footer-menu__row
     &__row {
         display: flex;
-        padding: rem(15);
+        padding: rem(15) 0;
         @media (max-width:$mobile){
             flex: 0 1 50%;
             flex-direction: column;
             align-items: start;
         }
         @media (min-width:$mobile){
+            padding: rem(15);
             &:not(:last-child) {
                 border-bottom: 1px solid #efefef;
             }
